# MPT

./: README.md
MThread/Zad1/: acceleration.txt  location.txt  main.cpp
MThread/Zad2/: CMakeLists.txt  main.cpp
MThread/Zad2/include/: Render.h
MThread/task1/: CMakeLists.txt  main.cpp  out2.gp
MThread/task1/include/: helpers.hpp  mergeSort.hpp  task.hpp
MThread/task3/: CMakeLists.txt  main.cpp
MThread/task3/include/: async_random.h  packet.h  packet_menager.h  simulated_data.h  your_solution.h
MThread/task3/src/: async_random.cpp
ModernCPP/: CMakeLists.txt  main.cpp
ModernCPP/LAB2/: main.cpp  main2.cpp  main3.cpp
ModernCPP/LAB3/: main.cpp
ModernCPP/LAB3/include/: Regex.h
ModernCPP/include/: Date.h  Day.h  Month.h  Year.h
ModernCPP/src/: Date.cpp
PyTest/tests/utils/: conftest.py  test_example.py
PyTest/utils/: BigNumber.py
